--- a/imguiiugmi/vs/imguiiugmi/imguiiugmi/imgui.ini
+++ b/imguiiugmi/vs/imguiiugmi/imguiiugmi/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
-Size=550,680
+Pos=756,17
+Size=554,657
 Collapsed=0
 
 [Window][Hello, world!]
@@ -13,8 +13,18 @@ Pos=60,60
 Size=345,186
 Collapsed=0
 
-[Window][Fire]
-Pos=142,324
-Size=184,88
+[Window][1]
+Pos=163,59
+Size=431,465
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=143,92
+Size=500,440
+Collapsed=0
+
+[Window][Shader Panel]
+Pos=33,339
+Size=531,352
 Collapsed=0
 
