--- a/imguiiugmi/vs/imguiiugmi/imguiiugmi/imguiiugmi.vcxproj
+++ b/imguiiugmi/vs/imguiiugmi/imguiiugmi/imguiiugmi.vcxproj
@@ -39,6 +39,42 @@
     <ClInclude Include="..\..\..\imguiiugmi\imgui\imstb_truetype.h" />
     <ClInclude Include="..\..\..\imguiiugmi\imgui_impl\imgui_impl_glfw.h" />
     <ClInclude Include="..\..\..\imguiiugmi\imgui_impl\imgui_impl_opengl3.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\allocators.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\document-wrapper.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\document.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\encodedstream.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\encodings.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\error\en.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\error\error.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\filereadstream.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\filewritestream.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\fwd.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\internal\biginteger.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\internal\diyfp.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\internal\dtoa.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\internal\ieee754.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\internal\itoa.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\internal\meta.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\internal\pow10.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\internal\regex.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\internal\stack.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\internal\strfunc.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\internal\strtod.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\internal\swap.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\istreamwrapper.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\memorybuffer.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\memorystream.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\msinttypes\inttypes.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\msinttypes\stdint.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\ostreamwrapper.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\pointer.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\prettywriter.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\rapidjson.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\reader.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\schema.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\stream.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\stringbuffer.h" />
+    <ClInclude Include="..\..\..\imguiiugmi\rapidjson\writer.h" />
     <ClInclude Include="..\..\..\imguiiugmi\shader.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
