imguiiugmi, use ShParser lib

--- a/imguiiugmi/vs2019/imguiiugmi/imguiiugmi/imguiiugmi.vcxproj
+++ b/imguiiugmi/vs2019/imguiiugmi/imguiiugmi/imguiiugmi.vcxproj
@@ -163,7 +163,7 @@
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>$(ProjectDir)..\third\glfw-3.3;$(ProjectDir)..\third\angle;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>PlayProject1.lib;common.lib;glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>common.lib;ShParser.lib;glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
       <IgnoreSpecificDefaultLibraries>msvcrt.lib</IgnoreSpecificDefaultLibraries>
     </Link>
