--- a/imguiiugmi/vs2019/imguiiugmi/imguiiugmi/imguiiugmi.vcxproj.filters
+++ b/imguiiugmi/vs2019/imguiiugmi/imguiiugmi/imguiiugmi.vcxproj.filters
@@ -308,5 +308,8 @@
     <ClInclude Include="..\..\..\imguiiugmi\FireJson.h">
       <Filter>Fire\IO</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\imguiiugmi\FireStPropertyObject.h">
+      <Filter>Fire\Data</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
