--- a/imguiiugmi/vs2019/imguiiugmi/imguiiugmi/imgui.ini
+++ b/imguiiugmi/vs2019/imguiiugmi/imguiiugmi/imgui.ini
@@ -4,12 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=697,22
+Pos=706,12
 Size=554,657
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=60,60
+Pos=11,8
 Size=345,186
 Collapsed=0
 
@@ -24,7 +24,7 @@ Size=500,440
 Collapsed=0
 
 [Window][Shader Panel]
-Pos=11,13
+Pos=308,16
 Size=859,681
 Collapsed=0
 
@@ -36,5 +36,20 @@ Collapsed=0
 [Window][PropertyPanel]
 Pos=49,63
 Size=535,472
+Collapsed=0
+
+[Window][ShaderNames]
+Pos=56,264
+Size=245,267
+Collapsed=0
+
+[Window][Shader Entrance]
+Pos=16,209
+Size=308,364
+Collapsed=0
+
+[Window][A]
+Pos=204,28
+Size=430,450
 Collapsed=0
 
