--- a/imguiiugmi/vs2019/imguiiugmi/imguiiugmi/imgui.ini
+++ b/imguiiugmi/vs2019/imguiiugmi/imguiiugmi/imgui.ini
@@ -4,14 +4,14 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=706,12
+Pos=935,29
 Size=554,657
-Collapsed=0
+Collapsed=1
 
 [Window][Hello, world!]
-Pos=11,8
+Pos=1002,4
 Size=345,186
-Collapsed=0
+Collapsed=1
 
 [Window][1]
 Pos=163,59
@@ -24,8 +24,8 @@ Size=500,440
 Collapsed=0
 
 [Window][Shader Panel]
-Pos=308,16
-Size=859,681
+Pos=19,29
+Size=573,641
 Collapsed=0
 
 [Window][Another Window]
@@ -44,12 +44,22 @@ Size=245,267
 Collapsed=0
 
 [Window][Shader Entrance]
-Pos=16,209
+Pos=14,234
 Size=308,364
 Collapsed=0
 
 [Window][A]
 Pos=204,28
 Size=430,450
+Collapsed=0
+
+[Window][Camera Setting]
+Pos=9,10
+Size=361,221
+Collapsed=0
+
+[Window][Simple]
+Pos=60,60
+Size=734,509
 Collapsed=0
 
